# Guten

./: .gitignore  Cargo.toml  LICENSE  README.md
Folio/: CORE_NEEDS.md  Cargo.toml  output.epub
Folio-cosmic/: Cargo.toml  com.gutenreader.GutenReaderCosmic.desktop  install.sh
Folio-cosmic/examples/: debug_fonts.rs  debug_parse.rs  test_css.rs  test_open.rs
Folio-cosmic/src/: annotations.rs  app.rs  content.rs  css.rs  document.rs  fonts.rs  image_resources.rs  lib.rs  main.rs  settings.rs  tts.rs
Folio-cosmic/src/reader/: mod.rs  renderer.rs  text_canvas.rs
Folio-cosmic/src/ui/: footer.rs  mod.rs  reader_view.rs  reading_panel.rs  sidebar.rs
Folio/examples/: debug_epub.rs  test_webkit.rs
Folio/src/: annotation_dialog.rs  annotations.rs  app.rs  document.rs  main.rs  search.rs  settings.rs  tts.rs  view.rs
Folio/test_book/: .gutenair.db
Folio/test_book/OEBPS/: content.opf
Folio/test_book/OEBPS/Text/: chap1.xhtml  extra.xhtml  nav.xhtml
Rubrica/: Cargo.toml
Rubrica-cosmic/: Cargo.toml  com.gutenair.RubricaCosmic.desktop  install.sh
Rubrica-cosmic/src/: app.rs  document.rs  main.rs  settings.rs
Rubrica-cosmic/src/ui/: editor_view.rs  export_dialog.rs  mod.rs  rename_dialog.rs  resource_sidebar.rs  syntax_highlighter.rs  toc_dialog.rs
Rubrica-gtk/: Cargo.toml
Rubrica-gtk/src/: book.rs  editor.rs  export.rs  main.rs  nav.rs  prelude.rs  reports.rs  resources.rs  search.rs  sidebar.rs  state.rs  ui.rs  validation.rs
Rubrica/src/: export.rs  manifest.rs  toc.rs
Scriptorium/: Cargo.toml
Scriptorium/scriptorium-gtk/: Cargo.toml
Scriptorium/scriptorium-gtk/src/: app.rs
Scriptorium/scriptorium-gtk/src/pages/: detail.rs  editor.rs  grid.rs  list.rs  mod.rs  reader.rs  settings.rs  stats.rs
Scriptorium/scriptorium-iced/: Cargo.toml  README.md  dev.scriptorium.Scriptorium.desktop  install.sh
Scriptorium/scriptorium-iced/src/: app.rs  main.rs
Scriptorium/scriptorium-pdf-pipeline/: Cargo.toml
Scriptorium/src/: library_db.rs
visore/: Cargo.toml
visore/src/: crop.rs  lib.rs  main.rs  sidebar.rs  viewer.rs
