[package]
name = "scriptorium-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = ["tokio", "wgpu", "xdg-portal"] }
scriptorium = { path = "../" }
gutencore = { package = "rubrica", path = "../../Rubrica" }
tokio = { version = "1.37", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

[workspace]
